
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PV_LH ;
 int PV_LP ;
 int PV_LR ;
 int PV_O ;
 int PV_RG ;
 int PV_RL ;
 int register_code (int ) ;
 int unregister_code (int ) ;

void plover_toggle(void) {

    register_code(PV_LP);
    register_code(PV_LH);
    register_code(PV_LR);
    register_code(PV_O);
    register_code(PV_RL);
    register_code(PV_RG);


    unregister_code(PV_LP);
    unregister_code(PV_LH);
    unregister_code(PV_LR);
    unregister_code(PV_O);
    unregister_code(PV_RL);
    unregister_code(PV_RG);
}
