; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_ez/keymaps/hacker_dvorak/extr_ploverplover_mode.c_plover_toggle.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_ez/keymaps/hacker_dvorak/extr_ploverplover_mode.c_plover_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PV_LP = common dso_local global i32 0, align 4
@PV_LH = common dso_local global i32 0, align 4
@PV_LR = common dso_local global i32 0, align 4
@PV_O = common dso_local global i32 0, align 4
@PV_RL = common dso_local global i32 0, align 4
@PV_RG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @plover_toggle() #0 {
  %1 = load i32, i32* @PV_LP, align 4
  %2 = call i32 @register_code(i32 %1)
  %3 = load i32, i32* @PV_LH, align 4
  %4 = call i32 @register_code(i32 %3)
  %5 = load i32, i32* @PV_LR, align 4
  %6 = call i32 @register_code(i32 %5)
  %7 = load i32, i32* @PV_O, align 4
  %8 = call i32 @register_code(i32 %7)
  %9 = load i32, i32* @PV_RL, align 4
  %10 = call i32 @register_code(i32 %9)
  %11 = load i32, i32* @PV_RG, align 4
  %12 = call i32 @register_code(i32 %11)
  %13 = load i32, i32* @PV_LP, align 4
  %14 = call i32 @unregister_code(i32 %13)
  %15 = load i32, i32* @PV_LH, align 4
  %16 = call i32 @unregister_code(i32 %15)
  %17 = load i32, i32* @PV_LR, align 4
  %18 = call i32 @unregister_code(i32 %17)
  %19 = load i32, i32* @PV_O, align 4
  %20 = call i32 @unregister_code(i32 %19)
  %21 = load i32, i32* @PV_RL, align 4
  %22 = call i32 @unregister_code(i32 %21)
  %23 = load i32, i32* @PV_RG, align 4
  %24 = call i32 @unregister_code(i32 %23)
  ret void
}

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
